--- a/index.html
+++ b/index.html
@@ -56,7 +56,14 @@
 			</div>
 			<div class="start">
 				<button class="btn btn-danger" id="newGame">
-					Start New Game
+					Start
+				</button>
+				<button
+					class="btn btn-danger"
+					id="newPage"
+					onClick="location.reload()"
+				>
+					Begin New Game
 				</button>
 			</div>
 			<div class="stat">
